--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -89,22 +89,26 @@
 .skillContainer {
   padding: 20px;
   text-align: center;
-  align-items: center;
-}
-
-.skillContainer {
-  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 .skillUnorderedList {
-  width: 25%;
-  text-align: left;
-  display: inline-block;
+  width: 30%;
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
 }
 
 .skillUnorderedList li {
   font-size: 22px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: #555;
+  text-align: center;
 }
 
+.skillUnorderedList li::marker {
+  color: #2b28ec;
+  font-size: 1.5rem;
+}
